--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
     </div>
 
-    <div class="credit"> created by <span> mr. web designer </span> | all rights reserved </div>
+    <div class="credit"> created by <span> Sardor </span></div>
 
 </section>
 
